# ChangeLog for net-misc/sshmenu
# Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

  29 Mar 2008; Thomas Anderson (gentoofan23) <gentoofan23@gmail.com>
  sshmenu-3.15.ebuild:
  Dep on dev-ruby/ruby-gnome if USE=gnome because dev-ruby/ruby-panel-applet2
  has the dependency missing. dev-ruby/ruby-gnome2 can be removed from RDEPEND
  when the issues in bug #215329 are fixed

  29 Mar 2008; Thomas Anderson (gentoofan23) <gentoofan23@gmail.com>
  sshmenu-3.15.ebuild:
  Fix typo in RDEPEND: s/getk2/gtk2/

  29 Mar 2008; Thomas Anderson (gentoofan23) <gentoofan23@gmail.com>
  +sshmenu-3.15.ebuild, +files/sshmenu-3.15-fixmultilib.patch,
  +metadata.xml:
  New ebuild for sshmenu, see bug #213944
